# mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp-config.example.json  pyproject.toml
.github/workflows/: tests.yml
examples/: vscode.mcp.json
src/postgres_mcp_server/: __init__.py  server.py
src/postgres_mcp_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sql_mcp_server/: secure_server.py  server.py
tests/: test_secure_server.py
