[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "MCP server to expose safe SQL databases read tools to agent clients."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.0",
]

[project.scripts]
sql-mcp-server = "sql_mcp_server.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
