[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "MCP server to expose safe SQL databases read tools to agent clients."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rapha4lx/mcp"
Issues = "https://github.com/rapha4lx/mcp/issues"

[project.scripts]
sql-mcp-server = "sql_mcp_server.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
