[project]
name = "sessiondb-mcp"
version = "0.1.0"
description = "SessionDB MCP: session-based MCP server for controlled SQL database access by agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
postgres-psycopg2 = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.1"]
all = [
  "psycopg[binary]>=3.1",
  "psycopg2-binary>=2.9",
  "pymysql>=1.1",
  "pyodbc>=5.1",
]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/rapha4lx/mcp"
Issues = "https://github.com/rapha4lx/mcp/issues"

[project.scripts]
sessiondb-mcp = "sql_mcp_server.secure_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
